--- a/model.tex
+++ b/model.tex
@@ -856,8 +856,8 @@ Finding the optimal assignment $X$ for the utility matrix
 \begin{equation*}
   w =
   \begin{bmatrix}
-    2 & 3 & 7 \\
-    4 & 5 & 8
+    4 & 5 & 8 \\
+    2 & 3 & 7
   \end{bmatrix}
 \end{equation*}
 is equivalent to the linear programming problem (quoting Lawler)
@@ -901,9 +901,9 @@ circuit in Figure~\ref{fig:assignment1}.
 The algorithm proceeds as follows:
 \begin{enumerate}
 \item Start with $X=()$ and $u= [ 8,  8] v= [ 0,  0,  0] $
-\item Identify \emph{augmenting} path, ie, a directed path that starts
-  with a link with no back voltage on the diode in series with the
-  voltage $w_{i,j}$ that is not in $X$ and perhaps continues with
+\item Identify an \emph{augmenting} path, ie, a directed path that
+  starts with a link with no back voltage on the diode in series with
+  the voltage $w_{i,j}$ that is not in $X$ and perhaps continues with
   pairs of links the first of which is in $X$ and goes from some $v_j$
   to a $u_i$ followed by a link not in $X$ with zero voltage on the
   diode that goes from a $u_i$ to a $v_j$.  The diodes and voltages
@@ -914,47 +914,96 @@ The algorithm proceeds as follows:
   $[(1,0)]$.  The augmentation yields $X=[(1,0)]$.
 \item In this step, I want to adjust some $u$ and $v$ values;
   decreasing the $u$s and increasing the $v$s.  I select the
-  adjustment value $\delta$ to by assigning candidates $\pi$ to each
+  adjustment value $\delta$ by assigning candidates $\pi$ to each
   node $j\in T$.  The value of $\pi_j$ is the minimum amount by which a
   link to $j$ that is not in $X$ is out of kilter.  For this step, the
   $\pi$ values are $[ 1, 5, 6]$, $\delta=1$, and the adjustment yields
-  $u= [ 7, 8] v= [ 0, 0, 0] pi= [ 0, 4, 5]$
+  $u= [ 7, 8],~ v= [ 0, 0, 0],~ \pi= [ 0, 4, 5]$
 \item With the adjusted $u_0$ value I recalculate and find
   $\pi=[0,3,4]$.  Now all links to the node $j=0$ are in kilter.  I
   can increase $v_0$ by any $\delta$ without throwing those links out
   of kilter if I also decrease the values of $u_i$ at the other ends
   of those links by the same amount.  An adjustment by $\delta=3$
-  yields $u= [ 4, 5] v= [ 3, 0, 0] pi= [ 0, 0, 1]$
+  yields $u= [ 4, 5],~ v= [ 3, 0, 0],~ \pi= [ 0, 0, 1]$
 \item These voltages enable the augmenting path $[(1,1) (1,0) (0,0)]$
   which yields $X= [(0, 0) (1, 1)]$
-\item End.  With these voltages and currents the would be no current
+\item End.  With these voltages and currents there would be no current
   through the $u$ voltage sources; I imagine removing them.
 \end{enumerate}
 
 \begin{verbatim}
-Before step 2 augmentation X= 
-j=0, S_label= {0: None, 1: None} T_label= {0: 1, 1: 1, 2: 1}
-Augmenting path= (1,0) 
-After step 2 augmentation:  X= (1, 0) 
-              and unscanned_S= {0: True}
+Begin step 1.3: Find pi by searching unscanned_s and links not in X.
+  unscanned_S= [0, 1]
+  u= [ 8.  8.]
+  v= [ 0.  0.  0.]
+ pi= [ 80.  80.  80.]
+Found pi= [ 4.  3.  0.]
 
-Before step 3 adjustment by delta=1.000:
-u= [ 8.  8.] v= [ 0.  0.  0.] pi= [ 1.  5.  6.]   After step 3 adjustment:
-u= [ 7.  8.] v= [ 0.  0.  0.] pi= [ 0.  4.  5.]
-New scannable T node: 0 
-S_label= {0: None} T_label= {0: 0, 1: 0, 2: 0}
+Since pi[2]==0 and 2 is not in X_T, start step 2 augmentation from j=2
+  with X= 
+ S_label= {0: None, 1: None} T_label= {0: 0, 1: 0, 2: 0}
+ Augmenting path= (0,2) 
+ After step 2 augmentation:  X= (0, 2) Y= 
+              and unscanned_S= [1]
 
-Before step 3 adjustment by delta=3.000:
-u= [ 7.  8.] v= [ 0.  0.  0.] pi= [ 0.  3.  4.]   After step 3 adjustment:
-u= [ 4.  5.] v= [ 3.  0.  0.] pi= [ 0.  0.  1.]
-New scannable T node: 1 
-S_label= {0: None, 1: 0} T_label= {0: 0, 1: 1, 2: 1}
+Begin step 1.3: Find pi by searching unscanned_s and links not in X.
+  unscanned_S= [1]
+  u= [ 8.  8.]
+  v= [ 0.  0.  0.]
+ pi= [ 80.  80.  80.]
+Found pi= [ 6.  5.  1.]
 
-Before step 2 augmentation X= (1, 0) 
-j=1, S_label= {0: None, 1: 0} T_label= {0: 0, 1: 1, 2: 1}
-Augmenting path= (1,1) (1,0) (0,0) 
-After step 2 augmentation:  X= (0, 0) (1, 1) 
-              and unscanned_S= {}
+Before step 3, delta=1.000:
+  u= [ 8.  8.] v= [ 0.  0.  0.] pi= [ 6.  5.  1.]
+  subtract from u[i] for i in [1]
+  subtract from pi[j]>0 otherwise add to v[j]
+ After step 3 adjustment:
+  u= [ 8.  7.] v= [ 0.  0.  0.] pi= [ 5.  4.  0.]
+  New scannable T nodes: 2 
+  S_label= {1: None} T_label= {0: 1, 1: 1, 2: 1}
+
+Begin step 1.3: Find pi by searching unscanned_s and links not in X.
+  unscanned_S= []
+  u= [ 8.  7.]
+  v= [ 0.  0.  0.]
+ pi= [ 5.  4.  0.]
+Found pi= [ 5.  4.  0.]
+
+Since pi[2]==0 and X_T[2]=0, set S_label[0] = 2, mark S[0] unscanned
+and mark T[2] scanned
+
+Begin step 1.3: Find pi by searching unscanned_s and links not in X.
+  unscanned_S= [0]
+  u= [ 8.  7.]
+  v= [ 0.  0.  0.]
+ pi= [ 5.  4.  0.]
+Found pi= [ 4.  3.  0.]
+
+Before step 3, delta=3.000:
+  u= [ 8.  7.] v= [ 0.  0.  0.] pi= [ 4.  3.  0.]
+  subtract from u[i] for i in [0, 1]
+  subtract from pi[j]>0 otherwise add to v[j]
+ After step 3 adjustment:
+  u= [ 5.  4.] v= [ 0.  0.  3.] pi= [ 1.  0.  0.]
+  New scannable T nodes: 1 
+  S_label= {0: 2, 1: None} T_label= {0: 0, 1: 0, 2: 1}
+
+Begin step 1.3: Find pi by searching unscanned_s and links not in X.
+  unscanned_S= []
+  u= [ 5.  4.]
+  v= [ 0.  0.  3.]
+ pi= [ 1.  0.  0.]
+Found pi= [ 1.  0.  0.]
+
+Since pi[1]==0 and 1 is not in X_T, start step 2 augmentation from j=1
+  with X= (0, 2) 
+ S_label= {0: 2, 1: None} T_label= {0: 0, 1: 0, 2: 1}
+ Augmenting path= (0,1) (0,2) (1,2) 
+ After step 2 augmentation:  X= (0, 1) (1, 2) Y= 
+              and unscanned_S= []
+
+Finished! delta=80.000 > min_u=4.000
+u= [ 5.  4.] v= [ 0.  0.  3.] pi= [ 80.  80.  80.]
 \end{verbatim}
 
 \subsection{Variation on Hungarian Algorithm}
