Added Id property

--- a/reports/JackM0808.tex
+++ b/reports/JackM0808.tex
@@ -176,9 +176,9 @@ linear in the number of frames.  The procedure produces plausible
 tracks, and it is easy to incorporate into the procedure model
 improvements and variations like those in the foregoing list.
 
-% \begin{verbatim}
-% $Id: $
-% \end{verbatim}
+\begin{verbatim}
+$Id$
+\end{verbatim}
 
 \end{document}
 
