--- a/presentations/PoA409.tex
+++ b/presentations/PoA409.tex
@@ -54,38 +54,24 @@ orientation, illumination)
 \frame{
   \frametitle{Solution Strategy}
   \begin{description}
-  \item[Want] to characterize
-\begin{equation*}
-  P(\ts{x}{1}{T}|\ts{y}{1}{T}) = \sum_{\ts{A}{1}{T}}  P(\ts{x}{1}{T},
-  \ts{A}{1}{T}|\ts{y}{1}{T}).
-\end{equation*}
-\item[Approximate by]   As an
-alternative we chose to approximate the best guess about both the
-sequence of states and the sequence of associations, ie,
-\begin{equation}
-  \label{eq:bear}
-  \ts{{\hat x}}{1}{T},\ts{{\hat A}}{1}{T} =
-  \argmax_{\ts{x}{1}{T},\ts{A}{1}{T}}   P(\ts{x}{1}{T},
-  \ts{A}{1}{T}|\ts{y}{1}{T}).
-\end{equation}
-While solving \eqref{eq:bear} exactly requires considering an enormous
-number of possible association sequences, we have developed an
-algorithm that uses ideas from Kalman filtering and Viterbi decoding
-that yields approximate solutions with a computational cost that is
-linear in the number of frames.  The procedure produces plausible
-tracks, and it is easy to incorporate into the procedure model
-improvements and variations like those in the foregoing list.
-
-  \item[State space model:] Linear target dynamics, Gaussian accelerations:
-    $x_j(t+1) = A \cdot x_j(t) + \eta(t)$.  Seek \textbf{M.A.P:}
+  \item[Want to characterize:]
     \begin{equation*}
-      \bf{\hat x}_1^T = \argmax_{\bf{x}_1^T} P(\bf{x}_1^T|\bf{y}_1^T)
+      P(\ts{x}{1}{T}|\ts{y}{1}{T}) = \sum_{\ts{A}{1}{T}}  P(\ts{x}{1}{T},
+      \ts{A}{1}{T}|\ts{y}{1}{T})
     \end{equation*}
-  \item[Challenge:] Find correct \textbf{association} (targets $\mapsto$
-    hits) for each frame.
-  \item[Solution:] Multi-hypothesis tracking.  (MHT: DB Reid IEEE
-    Trans AC 1979)\\ Use information from sequences that include
-    future frames to choose associations.
+    But density has $N^T$ components
+  \item[Approximate:]  with sequences of states and associations:
+    \begin{equation}
+      \label{eq:bear}
+      \ts{{\hat x}}{1}{T},\ts{{\hat A}}{1}{T} =
+      \argmax_{\ts{x}{1}{T},\ts{A}{1}{T}}   P(\ts{x}{1}{T},
+      \ts{A}{1}{T}|\ts{y}{1}{T})
+    \end{equation}
+    Like Kalman filtering and Viterbi decoding
+  \item[State space model:] Linear target dynamics, Gaussian accelerations:
+    $x_j(t+1) = A \cdot x_j(t) + \eta(t)$
+  \item[Similar to:] Multi-hypothesis tracking.  (MHT: DB Reid IEEE
+    Trans AC 1979)
   \end{description}
 }
 
@@ -200,7 +186,7 @@ Insights:
 }
 
 \frame{
-  \frametitle{Reduce density by $\frac{1}{3}$, MHT}
+  \frametitle{MHT}
   \href{run:movie_script3.sh}{
     \framebox[\textwidth]{\rule{0cm}{6cm}track1.mpg here}
   }
@@ -225,20 +211,19 @@ Insights:
   \frametitle{Status:}
   \begin{itemize}
   \item Good results for sparse traffic from extreme pruning
-  \item For moderate traffic, MHT helpful
+  \item For moderate traffic, MHT and multiple modes helpful
   \item Can't do dense traffic
   \item Current code implements Hungarian/Murty algorithm and
-    clustering; \emph{usually} runs and \emph{often} finds
-    \emph{plausible} tracks
+    clustering.
   \end{itemize}
 }
 
 \frame{
   \frametitle{Next steps:}
   \begin{itemize}
-  \item Debug: (\emph{usually/often} $\rightarrow$ \emph{always})
   \item Make model parameters depend on position
   \item Exploit attributes, eg, size/shape
+  \item Make motion model depend on orientation
   \item Flag difficult decisions
   \item Spend computational budget on \emph{important} tracks
   \end{itemize}
