Added bayes.fig to PoA409

--- a/presentations/PoA409.tex
+++ b/presentations/PoA409.tex
@@ -75,6 +75,10 @@ orientation, illumination)
   \end{description}
 }
 
+\frame{ \frametitle{Independence Structure}
+  \resizebox{0.8\textwidth}{!}{\input{bayes.pdf_t}}
+}
+
 \frame{
   \frametitle{Novelty?}
   \begin{itemize}
