CI before going to Snowbird DS 09

--- a/README
+++ b/README
@@ -74,3 +74,5 @@ MX:              Maximum number of association to find via exhaustive
 TM:              Maximum matching time.  If two targets match the same
                  observations for TM, drop the one with the lower
                  utility.
+
+LANL LACC LA-CC-08-003
