--- a/presentations/DS09_MS.tex
+++ b/presentations/DS09_MS.tex
@@ -6,6 +6,7 @@
 
 \begin{document}
 \begin{description}
+\item[MS28:] Monday 8:30 AM Wasatch A.  Mine 9-9:25
 \item[Title:] Video target tracking: Uncertain associations, dynamical
   models, and state estimation
 \item[Abstract:] % 75 word limit
@@ -17,7 +18,9 @@
   community, the combinatorial association aspect of this application
   may not be.  I use analogies to ideas the dynamical systems
   community have long considered to explain current algorithms.
+\item[Author Thing:] Monday 7:45 PM to 8:30
 % Next is the poster proposal that I submitted for the meeting
+\item[Poster session:]  8:30 PM Tuesday
 \item[Title:] Fidelity criteria and entropy
 \item[Abstract:] % 75 word limit
   I propose expected log likelihood per time (the cross entropy rate)
