Mega.py is code for making figure in SP article

--- a/model.tex
+++ b/model.tex
@@ -573,8 +573,9 @@ clustered into groups that are far apart, I can reduce the number of
 computations in the forward part of the Viterbi algorithm by breaking
 the problem into pieces that match the clusters in the data.
 
-I define a cluster of associations as a set associations each of which
-along with its predecessors explains the same set of observations.
+I define a cluster of associations as a set of associations each of
+which along with its predecessors explains the same set of
+observations.
 
 \subsubsection{Merging}
 \label{sec:merging}
