CI before ISR-2 talk.  Only changed pdf calls to external programs

--- a/presentations/snowbird09.tex
+++ b/presentations/snowbird09.tex
@@ -34,8 +34,8 @@ Software and documentation: LA-CC-08-03}
 }
 
 \frame{
-  \frametitle{Challenging Scene}
-  \href{run:movie_script1.sh}{
+  \frametitle{Challenging Scene}%sudo /etc/init.d/apparmor stop
+  \href{run:./movie_script1.sh}{
     \resizebox{0.7\textwidth}{!}{\includegraphics{images1.png}}
   }
 }
@@ -200,12 +200,12 @@ Insights:
       \hline
     \end{tabular}
   \end{center}
-  \href{run:start_View.sh}{\color{red}{Start GUI}}
+  \href{run:./start_View.sh}{\color{red}{Start GUI}}
 }
 
 \frame{
   \frametitle{MHT}
-  \href{run:movie_script3.sh}{
+  \href{run:./movie_script3.sh}{
     \resizebox{0.7\textwidth}{!}{\includegraphics{images1.png}} %track1.mpg
   }
 }
