Started work on i2sim.py for Reid's 2012 I^2 DR proposal

--- a/presentations/snowbird09.tex
+++ b/presentations/snowbird09.tex
@@ -2,6 +2,7 @@
 \documentclass{beamer}
 \usepackage{amsmath,amsfonts}
 \usepackage[pdftex]{rotating}
+\usepackage{hyperref} 
 \newcommand{\argmax}{\operatorname*{argmax}}
 \newcommand{\ti}[2]{{#1}{(#2)}}                         % Index
 \newcommand{\ts}[3]{{#1}_{#2}^{#3}} % Time series
